[package]
name = "kvs"
version = "0.1.0"
authors = ["Alec Di Vito <divito.alec@gmail.com>"]
description = "A key value store in rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "server"
path = "src/bin/kvs-server.rs"

[dependencies]
clap = "2.33"
structopt = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.8.3"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "1.0"
criterion = "0.3"
predicates = "1.0"
rand = { version = "0.8.3", features = ["small_rng"]}
tempfile = "3.2"
walkdir = "2.3"

[[bench]]
name = "engine_bench"
harness = false