[package]
name = "kvs"
version = "0.1.0"
authors = ["Alec Di Vito <divito.alec@gmail.com>"]
description = "A key value store in rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[dependencies]
clap-v3 = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9"
sled = "0.34.6"
crc = "2.0.0"
uuid = { version = "0.8", features = ["v4"]}

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.3"
crossbeam-utils = "0.8"
predicates = "2.0"
rand = { version = "0.8.4", features = ["small_rng"]}
tempfile = "3.2"
walkdir = "2.3"
panic-control =  "0.1.4"

[[bench]]
name = "engine_bench"
harness = false